<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/menu_top">

        <item
            android:checkable="true"
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:checkable="true"
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/rate_ic"
            android:title="@string/menu_rate" />
        <item
            android:checkable="true"
            android:id="@+id/about"
            android:icon="@drawable/about_ic"
            android:title="@string/about" />

        <item
            android:checkable="true"
            android:id="@+id/privacy"
            android:icon="@drawable/disclaimer"
            android:title="@string/disclaimer2" />


    </group>
    <group
        android:id="@+id/menu_bottom"
        >
        <item
            android:checkable="true"
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_ic"
            android:title="@string/menu_exit" />
    </group>

</menu>
